deployment-scripts/test/reelcruit-candidate-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelcruit-backend-test
  namespace: test
  labels:
    app: reelcruit-backend-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reelcruit-backend-test
  template:
    metadata:
      labels:
        app: reelcruit-backend-test
    spec:
      containers:
        - name: reelcruit-test
          image: reelcruitapp/reelcruit-candidate-api
          # image: reelcruitapp/reelcruit-candidate-api:test
          ports:
            - containerPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: reelcruit-backend-svc-test
  namespace: test
spec:
  type: NodePort
  ports:
    - name: http
      port: 5001
      targetPort: 5001
  selector:
    app: reelcruit-backend-test
