deployment-scripts/test/reelcruit-candidate-be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: candidate-be-test-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test-api.reelcruit.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reelcruit-backend-test-svc
              port:
                number: 5001

    - host: www.test-api.reelcruit.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reelcruit-backend-test-svc
              port:
                number: 5001
